# opengl-test

./: CMakeLists.txt  opengl-glfw.sln  opengl.sln
basics/: basics.vcxproj  basics.vcxproj.filters
basics/src/: camera.h  main.cpp  shader.h  shader.vert
game/: game.vcxproj  game.vcxproj.filters
game/src/: main.cpp  shader.fs  shader.vs
lighting/: lighting.vcxproj  lighting.vcxproj.filters
lighting/res/shaders/: light_shader.fs
lighting/src/: light_shader.fs  light_shader.vs  main.cpp  shader.fs  shader.vs
opengl/: main.cpp  test.vcxproj
opengl-glfw/: Source.cpp  fragShader.glsl  main.cpp  opengl-glfw.vcxproj  opengl-glfw.vcxproj.filters  shader.frag  shader.h  shader.vert  vertShader.glsl
opengl/basics/: basics.vcxproj
opengl/basics/src/: camera.h  main.cpp  shader.frag
opengl/test/: test.vcxproj  test.vcxproj.filters
opengl/test/src/: main.cpp
scenes/: scenes.vcxproj  scenes.vcxproj.filters
scenes/res/shaders/: cubes.vs  sphere.vs
scenes/src/: camera.h  cube.h  cubes.fs  cubes.h  cubes.vs  main.cpp  scene.h  scene.vs  sphere.h  wave.h  wave.vs
stuff/: stuff.vcxproj  stuff.vcxproj.filters
stuff/src/: wave.cpp  wave.vs
